--- a/product-manager.html
+++ b/product-manager.html
@@ -41,23 +41,23 @@
     <div class="container">
 <!--Begin body here --> 
 <h5><a href='https://jobs.smartrecruiters.com/AroghiaGroup/743999698692819-product-owner-for-global-sportswear-brand'>Aroghia Group Product Owner for Global Sportswear Brand | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Beaverton, OR, USA</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
 <h5><a href='https://jobs.smartrecruiters.com/AroghiaGroup/743999698692691-technical-product-manager-for-global-sportswear-brand'>Aroghia Group Technical Product Manager for Global Sportswear Brand | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Beaverton, OR, USA</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
 <h5><a href='https://jobs.lever.co/veeva/ea2911a3-e593-4db6-a729-fbbccf42677d'>Veeva Systems - Product Manager - Andi</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Canada Toronto</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
 <h5><a href='https://jobs.smartrecruiters.com/Allegro/743999697890847-product-manager-performance-marketing-team'>Allegro Product Manager - Performance Marketing Team | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Krak?w</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
 <h5><a href='https://sharpist.join.com/jobs/475712-product-owner-m-f-d'>Job @ Sharpist (Berlin): Product Owner (m/f/d) | JOIN</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
 <h5><a href='https://dasauge.de/jobs/stellenangebote/fest/e585385'>Stellenangebot: Digital Product Designer f?r Produktentwicklung (m/w/d) (Berlin) ? dasauge? Stellenmarkt</a></h5> 
@@ -88,7 +88,7 @@
 <p><span class="badge badge-light">Prague, Czech Republic</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/artsy/jobs/1944747'>Job Application for Senior Product Manager at Artsy</a></h5> 
+<h5><a href='https://boards.greenhouse.io/artsy/jobs/1944747'>Job Application for Senior Product Manager at Artsy</a></h5> 
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -108,7 +108,7 @@
 <p><span class="badge badge-light">London, United Kingdom  London</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://elsewhen.recruitee.com/o/contract-senior-product-manager-london'>
+<h5><a href='https://elsewhen.recruitee.com/o/contract-senior-product-manager-london'>
       Contract Senior Product Manager - Elsewhen
     </a></h5> 
 <p><span class="badge badge-light">London, United Kingdom  London</span></p>
@@ -136,7 +136,7 @@
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/vpTech/a8bfca33-f3e1-428c-a998-1721f8c718ab'>vpTech - Product owner - Service manager</a></h5> 
+<h5><a href='https://jobs.lever.co/vpTech/a8bfca33-f3e1-428c-a998-1721f8c718ab'>vpTech - Product owner - Service manager</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -148,7 +148,7 @@
 <p><span class="badge badge-light">London London</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/pager/jobs/1941775'>Job Application for Product Manager at Pager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/pager/jobs/1941775'>Job Application for Product Manager at Pager</a></h5> 
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -168,7 +168,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/apttus/job/oeOlbfwi'>Apttus Careers - Sr Product Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/apttus/job/oeOlbfwi'>Apttus Careers - Sr Product Manager</a></h5> 
 <p><span class="badge badge-light">San Mateo, California</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -180,7 +180,7 @@
 <p><span class="badge badge-light">Oslo, Norway</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/zopa/785ab219-f8d7-4452-81c7-6aeb888f4488'>Zopa - Senior Product Designer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/zopa/785ab219-f8d7-4452-81c7-6aeb888f4488'>Zopa - Senior Product Designer</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -298,7 +298,7 @@
 <p><span class="badge badge-light">Montreal, QC</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/ocadotechnology/jobs/4348968002'>Job Application for Principal Product Manager (OSP Now) at Ocado Group</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/ocadotechnology/jobs/4348968002'>Job Application for Principal Product Manager (OSP Now) at Ocado Group</a></h5> 
 <p><span class="badge badge-light">Wroclaw</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -314,7 +314,7 @@
 <p><span class="badge badge-light">San Diego</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qyIaVfw5&k=Job&j=oYEuafw0&__jvst=Employee&__jvsd=sY5fThwX&__jvsc=Twitter&bid=n2ZjqMw1'>INNIO Careers - Service Product Manager</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qyIaVfw5&k=Job&j=oYEuafw0&__jvst=Employee&__jvsd=sY5fThwX&__jvsc=Twitter&bid=n2ZjqMw1'>INNIO Careers - Service Product Manager</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
@@ -358,7 +358,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/buoyhealth/aee37e0b-11be-41f8-94b6-c29c51b7a4c6'>Buoy Health - Product Owner</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/buoyhealth/aee37e0b-11be-41f8-94b6-c29c51b7a4c6'>Buoy Health - Product Owner</a></h5> 
 <p><span class="badge badge-light">New York, NY  Boston</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -384,7 +384,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/spell/jobs/4471407002'>Job Application for Lead Product Manager at Spell</a></h5> 
+<h5><a href='https://boards.greenhouse.io/spell/jobs/4471407002'>Job Application for Lead Product Manager at Spell</a></h5> 
 <p><span class="badge badge-light">New York City</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -414,7 +414,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/uniteus/jobs/4325874002'>Job Application for Product Manager (EMR/EHR) at Unite Us</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/uniteus/jobs/4325874002'>Job Application for Product Manager (EMR/EHR) at Unite Us</a></h5> 
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -434,7 +434,7 @@
 <p><span class="badge badge-light">Bangalore, India</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Square/743999698611715-senior-product-designer-square-ecommerce'>Square Senior Product Designer, Square Ecommerce | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Square/743999698611715-senior-product-designer-square-ecommerce'>Square Senior Product Designer, Square Ecommerce | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA, USA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -454,7 +454,7 @@
 <p><span class="badge badge-light">Palo Alto, CA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/americaatwork/2bb511c7-d0f7-4ad4-99a8-ee4f443c83d4'>America At Work - Product Manager (copy)</a></h5> 
+<h5><a href='https://jobs.lever.co/americaatwork/2bb511c7-d0f7-4ad4-99a8-ee4f443c83d4'>America At Work - Product Manager (copy)</a></h5> 
 <p><span class="badge badge-light">Dallas, TX</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
